Install python-fitbit from github using pip.
It doesn't seem possible to tell setup.py how to clone python-fitbit
from github. For now, it'll be necessary to "pip install -r requirements.txt"
to get it.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-#-e git+https://github.com/orcasgit/python-fitbit.git#egg=fitbit
-# Using this format so we can pull it into setup.py too:
-https://github.com/orcasgit/python-fitbit/tarball/master#egg=fitbit
+# FIXME: once python-fitbit is public, switch to https access
+git+ssh://git@github.com/orcasgit/python-fitbit.git#egg=fitbit
