--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,7 +1,8 @@
-django-debug-toolbar==0.9.4
-django-nose==1.1
-django>=1.3.2
-nose-progressive==1.3
-mock==1.0
--e git+https://github.com/jbalogh/check.git#egg=check
-sphinx==1.1.3
+-r requirements.txt
+
+django-debug-toolbar==1.0.1
+django-nose==1.2
+django==1.6.2
+nose-progressive==1.5
+mock==1.0.1
+sphinx==1.2.2
