--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,7 @@ python:
   - pypy
 
 install:
+  - pip install coveralls
   - pip install -r requirements_dev.txt
-script: python run_tests.py
+script: coverage run run_tests.py
+after_success: coveralls
