--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
 include README.md
 include LICENSE.txt
 recursive-include fitapp/templates *
-include requirements.txt
-include requirements_dev.txt
+include requirements/*
