--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pypy-trunk,pypy-1.6.X,pypy-1.5.X,pypy-1.4.X,py27-trunk,py27-1.6.X,py27-1.5.X,py27-1.4.X,py26-1.6.X,py26-1.5.X,py26-1.4.X
+envlist = pypy-trunk,pypy-1.6.X,pypy-1.5.X,pypy-1.4.X,py34-trunk,py34-1.6.X,py34-1.5.X,py33-trunk,py33-1.6.X,py33-1.5.X,py32-trunk,py32-1.6.X,py32-1.5.X,py27-trunk,py27-1.6.X,py27-1.5.X,py27-1.4.X,py26-1.6.X,py26-1.5.X,py26-1.4.X
 
 [testenv]
 commands = {envpython} run_tests.py
@@ -36,6 +36,42 @@ deps = {[django15]deps}
 [testenv:pypy-1.4.X]
 basepython = pypy
 deps = {[django14]deps}
+
+[testenv:py34-trunk]
+basepython = python3.4
+deps = {[djangotrunk]deps}
+
+[testenv:py34-1.6.X]
+basepython = python3.4
+deps = {[django16]deps}
+
+[testenv:py34-1.5.X]
+basepython = python3.4
+deps = {[django15]deps}
+
+[testenv:py33-trunk]
+basepython = python3.3
+deps = {[djangotrunk]deps}
+
+[testenv:py33-1.6.X]
+basepython = python3.3
+deps = {[django16]deps}
+
+[testenv:py33-1.5.X]
+basepython = python3.3
+deps = {[django15]deps}
+
+[testenv:py32-trunk]
+basepython = python3.2
+deps = {[djangotrunk]deps}
+
+[testenv:py32-1.6.X]
+basepython = python3.2
+deps = {[django16]deps}
+
+[testenv:py32-1.5.X]
+basepython = python3.2
+deps = {[django15]deps}
 
 [testenv:py27-trunk]
 basepython = python2.7
