--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: python
-python: 2.7
+python: 3.3
 env:
   - TOX_ENV=pypy-trunk
   - TOX_ENV=pypy-1.6.X
   - TOX_ENV=pypy-1.5.X
   - TOX_ENV=pypy-1.4.X
+  - TOX_ENV=py33-trunk
+  - TOX_ENV=py33-1.6.X
+  - TOX_ENV=py33-1.5.X
+  - TOX_ENV=py32-trunk
+  - TOX_ENV=py32-1.6.X
+  - TOX_ENV=py32-1.5.X
   - TOX_ENV=py27-trunk
   - TOX_ENV=py27-1.6.X
   - TOX_ENV=py27-1.5.X
