--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,5 @@ env:
 install:
   - pip install coveralls
   - pip install tox
-script:
-  # https://github.com/travis-ci/travis-ci/issues/2218
-  - export PATH=/opt/python/2.7.6/bin:/opt/python/2.6.9/bin:/opt/python/3.4.0/bin:/opt/python/3.3.5/bin:/opt/python/3.2.5/bin:/opt/python/pypy-2.2.1/bin:$PATH
-  - tox -e $TOX_ENV
+script: tox -e $TOX_ENV
 after_success: coveralls
