use zip instead of clone for faster trunk tests


--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ commands = {envpython} run_tests.py
 deps = -r{toxinidir}/requirements/test.txt
 
 [djangotrunk]
-deps = git+https://github.com/django/django.git#egg=django
+deps = https://github.com/django/django/archive/master.zip
        {[testenv]deps}
 
 [django16]
