--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pypy-trunk,pypy-1.6.X,pypy-1.5.X,pypy-1.4.X,py34-trunk,py34-1.6.X,py34-1.5.X,py33-trunk,py33-1.6.X,py33-1.5.X,py32-trunk,py32-1.6.X,py32-1.5.X,py27-trunk,py27-1.6.X,py27-1.5.X,py27-1.4.X,py26-1.6.X,py26-1.5.X,py26-1.4.X
+envlist = pypy-trunk,pypy-1.7.X,pypy-1.6.X,pypy-1.4.X,py34-trunk,py34-1.7.X,py34-1.6.X,py33-trunk,py33-1.7.X,py33-1.6.X,py32-trunk,py32-1.7.X,py32-1.6.X,py27-trunk,py27-1.7.X,py27-1.6.X,py27-1.4.X,py26-1.6.X,py26-1.4.X
 
 [testenv]
 commands = {envpython} run_tests.py
@@ -7,6 +7,10 @@ deps = -r{toxinidir}/requirements/test.txt
 
 [djangotrunk]
 deps = https://github.com/django/django/archive/master.zip
+       {[testenv]deps}
+
+[django17]
+deps = django>=1.7,<1.8
        {[testenv]deps}
 
 [django16]
@@ -25,13 +29,13 @@ deps = django>=1.4,<1.5
 basepython = pypy
 deps = {[djangotrunk]deps}
 
+[testenv:pypy-1.7.X]
+basepython = pypy
+deps = {[django17]deps}
+
 [testenv:pypy-1.6.X]
 basepython = pypy
 deps = {[django16]deps}
-
-[testenv:pypy-1.5.X]
-basepython = pypy
-deps = {[django15]deps}
 
 [testenv:pypy-1.4.X]
 basepython = pypy
@@ -41,49 +45,49 @@ deps = {[django14]deps}
 basepython = python3.4
 deps = {[djangotrunk]deps}
 
+[testenv:py34-1.7.X]
+basepython = python3.4
+deps = {[django17]deps}
+
 [testenv:py34-1.6.X]
 basepython = python3.4
 deps = {[django16]deps}
-
-[testenv:py34-1.5.X]
-basepython = python3.4
-deps = {[django15]deps}
 
 [testenv:py33-trunk]
 basepython = python3.3
 deps = {[djangotrunk]deps}
 
+[testenv:py33-1.7.X]
+basepython = python3.3
+deps = {[django17]deps}
+
 [testenv:py33-1.6.X]
 basepython = python3.3
 deps = {[django16]deps}
-
-[testenv:py33-1.5.X]
-basepython = python3.3
-deps = {[django15]deps}
 
 [testenv:py32-trunk]
 basepython = python3.2
 deps = {[djangotrunk]deps}
 
+[testenv:py32-1.7.X]
+basepython = python3.2
+deps = {[django17]deps}
+
 [testenv:py32-1.6.X]
 basepython = python3.2
 deps = {[django16]deps}
-
-[testenv:py32-1.5.X]
-basepython = python3.2
-deps = {[django15]deps}
 
 [testenv:py27-trunk]
 basepython = python2.7
 deps = {[djangotrunk]deps}
 
+[testenv:py27-1.7.X]
+basepython = python2.7
+deps = {[django17]deps}
+
 [testenv:py27-1.6.X]
 basepython = python2.7
 deps = {[django16]deps}
-
-[testenv:py27-1.5.X]
-basepython = python2.7
-deps = {[django15]deps}
 
 [testenv:py27-1.4.X]
 basepython = python2.7
@@ -92,10 +96,6 @@ deps = {[django14]deps}
 [testenv:py26-1.6.X]
 basepython = python2.6
 deps = {[django16]deps}
-
-[testenv:py26-1.5.X]
-basepython = python2.6
-deps = {[django15]deps}
 
 [testenv:py26-1.4.X]
 basepython = python2.6
