--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps = https://github.com/django/django/archive/master.zip
        {[testenv]deps}
 
 [django17]
-deps = django>=1.7,<1.8
+deps = django>=1.7,<1.8a1
        {[testenv]deps}
 
 [django16]
