Change tox config to test on Django 1.8; stop testing on trunk.

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,16 @@
 [tox]
-envlist = pypy-trunk,pypy-1.7.X,pypy-1.6.X,pypy-1.4.X,py34-trunk,py34-1.7.X,py34-1.6.X,py33-trunk,py33-1.7.X,py33-1.6.X,py32-trunk,py32-1.7.X,py32-1.6.X,py27-trunk,py27-1.7.X,py27-1.6.X,py27-1.4.X,py26-1.6.X,py26-1.4.X
+envlist = pypy-1.8.X,pypy-1.7.X,pypy-1.6.X,pypy-1.4.X,py34-1.8.X,py34-1.7.X,py34-1.6.X,py33-1.8.X,py33-1.7.X,py33-1.6.X,py32-1.8.X,py32-1.7.X,py32-1.6.X,py27-1.8.X,py27-1.7.X,py27-1.6.X,py27-1.4.X,py26-1.6.X,py26-1.4.X
 
 [testenv]
 commands = {envpython} run_tests.py
 deps = -r{toxinidir}/requirements/test.txt
 
-[djangotrunk]
-deps = https://github.com/django/django/archive/master.zip
+[django18]
+deps = django>=1.8,<1.9
        {[testenv]deps}
 
 [django17]
-deps = django>=1.7,<1.8a1
+deps = django>=1.7,<1.8
        {[testenv]deps}
 
 [django16]
@@ -21,9 +21,9 @@ deps = django>=1.6,<1.7
 deps = django>=1.4,<1.5
        {[testenv]deps}
 
-[testenv:pypy-trunk]
+[testenv:pypy-1.8.X]
 basepython = pypy
-deps = {[djangotrunk]deps}
+deps = {[django18]deps}
 
 [testenv:pypy-1.7.X]
 basepython = pypy
@@ -37,9 +37,9 @@ deps = {[django16]deps}
 basepython = pypy
 deps = {[django14]deps}
 
-[testenv:py34-trunk]
+[testenv:py34-1.8.X]
 basepython = python3.4
-deps = {[djangotrunk]deps}
+deps = {[django18]deps}
 
 [testenv:py34-1.7.X]
 basepython = python3.4
@@ -49,9 +49,9 @@ deps = {[django17]deps}
 basepython = python3.4
 deps = {[django16]deps}
 
-[testenv:py33-trunk]
+[testenv:py33-1.8.X]
 basepython = python3.3
-deps = {[djangotrunk]deps}
+deps = {[django18]deps}
 
 [testenv:py33-1.7.X]
 basepython = python3.3
@@ -61,9 +61,9 @@ deps = {[django17]deps}
 basepython = python3.3
 deps = {[django16]deps}
 
-[testenv:py32-trunk]
+[testenv:py32-1.8.X]
 basepython = python3.2
-deps = {[djangotrunk]deps}
+deps = {[django18]deps}
 
 [testenv:py32-1.7.X]
 basepython = python3.2
@@ -73,9 +73,9 @@ deps = {[django17]deps}
 basepython = python3.2
 deps = {[django16]deps}
 
-[testenv:py27-trunk]
+[testenv:py27-1.8.X]
 basepython = python2.7
-deps = {[djangotrunk]deps}
+deps = {[django18]deps}
 
 [testenv:py27-1.7.X]
 basepython = python2.7
