update requirements, support Django 1.9, python 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,23 @@
 [tox]
-envlist = pypy-1.8.X,pypy-1.7.X,pypy-1.6.X,pypy-1.4.X,py34-1.8.X,py34-1.7.X,py34-1.6.X,py33-1.8.X,py33-1.7.X,py33-1.6.X,py32-1.8.X,py32-1.7.X,py32-1.6.X,py27-1.8.X,py27-1.7.X,py27-1.6.X,py27-1.4.X,py26-1.6.X,py26-1.4.X
+envlist = pypy-1.9.X,pypy-1.8.X,pypy-1.7.X,pypy-1.4.X,
+          py35-trunk,py35-1.9.X,
+          py34-trunk,py34-1.9.X,py34-1.8.X,py34-1.7.X,
+          py33-1.8.X,py33-1.7.X,
+          py32-1.8.X,py32-1.7.X,
+          py27-1.9.X,py27-1.8.X,py27-1.7.X,py27-1.4.X,
+          py26-1.4.X
 
 [testenv]
 commands = {envpython} run_tests.py
 deps = -r{toxinidir}/requirements/test.txt
+
+[djangotrunk]
+deps = https://github.com/django/django/archive/master.zip
+       {[testenv]deps}
+
+[django19]
+deps = django>=1.8,<1.10
+       {[testenv]deps}
 
 [django18]
 deps = django>=1.8,<1.9
@@ -13,13 +27,17 @@ deps = django>=1.8,<1.9
 deps = django>=1.7,<1.8
        {[testenv]deps}
 
-[django16]
-deps = django>=1.6,<1.7
-       {[testenv]deps}
-
 [django14]
 deps = django>=1.4,<1.5
        {[testenv]deps}
+
+[testenv:pypy-trunk]
+basepython = pypy
+deps = {[djangotrunk]deps}
+
+[testenv:pypy-1.9.X]
+basepython = pypy
+deps = {[django19]deps}
 
 [testenv:pypy-1.8.X]
 basepython = pypy
@@ -29,13 +47,33 @@ deps = {[django18]deps}
 basepython = pypy
 deps = {[django17]deps}
 
-[testenv:pypy-1.6.X]
-basepython = pypy
-deps = {[django16]deps}
-
 [testenv:pypy-1.4.X]
 basepython = pypy
 deps = {[django14]deps}
+
+[testenv:py35-trunk]
+basepython = python3.5
+deps = {[djangotrunk]deps}
+
+[testenv:py35-1.9.X]
+basepython = python3.5
+deps = {[django19]deps}
+
+[testenv:py35-1.8.X]
+basepython = python3.5
+deps = {[django18]deps}
+
+[testenv:py35-1.7.X]
+basepython = python3.5
+deps = {[django17]deps}
+
+[testenv:py34-trunk]
+basepython = python3.4
+deps = {[djangotrunk]deps}
+
+[testenv:py34-1.9.X]
+basepython = python3.4
+deps = {[django19]deps}
 
 [testenv:py34-1.8.X]
 basepython = python3.4
@@ -45,10 +83,6 @@ deps = {[django18]deps}
 basepython = python3.4
 deps = {[django17]deps}
 
-[testenv:py34-1.6.X]
-basepython = python3.4
-deps = {[django16]deps}
-
 [testenv:py33-1.8.X]
 basepython = python3.3
 deps = {[django18]deps}
@@ -56,10 +90,6 @@ deps = {[django18]deps}
 [testenv:py33-1.7.X]
 basepython = python3.3
 deps = {[django17]deps}
-
-[testenv:py33-1.6.X]
-basepython = python3.3
-deps = {[django16]deps}
 
 [testenv:py32-1.8.X]
 basepython = python3.2
@@ -69,9 +99,13 @@ deps = {[django18]deps}
 basepython = python3.2
 deps = {[django17]deps}
 
-[testenv:py32-1.6.X]
-basepython = python3.2
-deps = {[django16]deps}
+[testenv:py27-trunk]
+basepython = python2.7
+deps = {[djangotrunk]deps}
+
+[testenv:py27-1.9.X]
+basepython = python2.7
+deps = {[django19]deps}
 
 [testenv:py27-1.8.X]
 basepython = python2.7
@@ -81,17 +115,9 @@ deps = {[django18]deps}
 basepython = python2.7
 deps = {[django17]deps}
 
-[testenv:py27-1.6.X]
-basepython = python2.7
-deps = {[django16]deps}
-
 [testenv:py27-1.4.X]
 basepython = python2.7
 deps = {[django14]deps}
-
-[testenv:py26-1.6.X]
-basepython = python2.6
-deps = {[django16]deps}
 
 [testenv:py26-1.4.X]
 basepython = python2.6
