--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,26 @@
 language: python
-python: 3.4
+python: 3.5
 env:
-  - TOX_ENV=pypy-trunk
-  - TOX_ENV=pypy-1.7.X
-  - TOX_ENV=pypy-1.6.X
-  - TOX_ENV=pypy-1.4.X
-  - TOX_ENV=py33-trunk
+  # Avoid testing pypy on travis until the following issue is fixed:
+  #   https://github.com/travis-ci/travis-ci/issues/4756
+  #- TOX_ENV=pypy-1.9.X
+  #- TOX_ENV=pypy-1.8.X
+  #- TOX_ENV=pypy-1.7.X
+  #- TOX_ENV=pypy-1.4.X
+  - TOX_ENV=py35-trunk
+  - TOX_ENV=py35-1.9.X
+  - TOX_ENV=py34-trunk
+  - TOX_ENV=py34-1.9.X
+  - TOX_ENV=py34-1.8.X
+  - TOX_ENV=py34-1.7.X
+  - TOX_ENV=py33-1.8.X
   - TOX_ENV=py33-1.7.X
-  - TOX_ENV=py33-1.6.X
-  - TOX_ENV=py32-trunk
+  - TOX_ENV=py32-1.8.X
   - TOX_ENV=py32-1.7.X
-  - TOX_ENV=py32-1.6.X
-  - TOX_ENV=py27-trunk
+  - TOX_ENV=py27-1.9.X
+  - TOX_ENV=py27-1.8.X
   - TOX_ENV=py27-1.7.X
-  - TOX_ENV=py27-1.6.X
   - TOX_ENV=py27-1.4.X
-  - TOX_ENV=py26-1.6.X
   - TOX_ENV=py26-1.4.X
 install:
   - pip install coveralls
