--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = pypy-1.9.X,pypy-1.8.X,pypy-1.7.X,pypy-1.4.X,
+envlist = pypy-1.9.X,pypy-1.8.X,pypy-1.7.X
           py35-trunk,py35-1.9.X,
           py34-trunk,py34-1.9.X,py34-1.8.X,py34-1.7.X,
           py33-1.8.X,py33-1.7.X,
-          py27-1.9.X,py27-1.8.X,py27-1.7.X,py27-1.4.X,
-          py26-1.4.X
+          py27-1.9.X,py27-1.8.X,py27-1.7.X
 
 [testenv]
 commands = {envpython} run_tests.py
