Drop support for Django 1.4

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = pypy-1.9.X,pypy-1.8.X,pypy-1.7.X,pypy-1.4.X,
+envlist = pypy-1.9.X,pypy-1.8.X,pypy-1.7.X,
           py35-trunk,py35-1.9.X,
           py34-trunk,py34-1.9.X,py34-1.8.X,py34-1.7.X,
           py33-1.8.X,py33-1.7.X,
-          py27-1.9.X,py27-1.8.X,py27-1.7.X,py27-1.4.X,
-          py26-1.4.X
+          py27-1.9.X,py27-1.8.X,py27-1.7.X
 
 [testenv]
 commands = {envpython} run_tests.py
@@ -26,10 +25,6 @@ deps = django>=1.8,<1.9
 deps = django>=1.7,<1.8
        {[testenv]deps}
 
-[django14]
-deps = django>=1.4,<1.5
-       {[testenv]deps}
-
 [testenv:pypy-trunk]
 basepython = pypy
 deps = {[djangotrunk]deps}
@@ -45,10 +40,6 @@ deps = {[django18]deps}
 [testenv:pypy-1.7.X]
 basepython = pypy
 deps = {[django17]deps}
-
-[testenv:pypy-1.4.X]
-basepython = pypy
-deps = {[django14]deps}
 
 [testenv:py35-trunk]
 basepython = python3.5
@@ -105,11 +96,3 @@ deps = {[django18]deps}
 [testenv:py27-1.7.X]
 basepython = python2.7
 deps = {[django17]deps}
-
-[testenv:py27-1.4.X]
-basepython = python2.7
-deps = {[django14]deps}
-
-[testenv:py26-1.4.X]
-basepython = python2.6
-deps = {[django14]deps}
