refresh tox testing matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = pypy-1.9.X,pypy-1.8.X,pypy-1.7.X,
-          py35-trunk,py35-1.9.X,
-          py34-trunk,py34-1.9.X,py34-1.8.X,py34-1.7.X,
-          py33-1.8.X,py33-1.7.X,
-          py27-1.9.X,py27-1.8.X,py27-1.7.X
+envlist = pypy-trunk,pypy-1.10.X,pypy-1.9.X,pypy-1.8.X,
+          py35-trunk,py35-1.10.X,py35-1.9.X,
+          py34-trunk,py34-1.10.X,py34-1.9.X,py34-1.8.X
+          py33-1.8.X,
+          py27-trunk,py27-1.10.X,py27-1.9.X,py27-1.8.X
 
 [testenv]
 commands = {envpython} run_tests.py
@@ -13,21 +13,25 @@ deps = -r{toxinidir}/requirements/test.txt
 deps = https://github.com/django/django/archive/master.zip
        {[testenv]deps}
 
+[django110]
+deps = django>=1.10,<1.11
+       {[testenv]deps}
+
 [django19]
-deps = django>=1.8,<1.10
+deps = django>=1.9,<1.10
        {[testenv]deps}
 
 [django18]
 deps = django>=1.8,<1.9
        {[testenv]deps}
 
-[django17]
-deps = django>=1.7,<1.8
-       {[testenv]deps}
-
 [testenv:pypy-trunk]
 basepython = pypy
 deps = {[djangotrunk]deps}
+
+[testenv:pypy-1.10.X]
+basepython = pypy
+deps = {[django110]deps}
 
 [testenv:pypy-1.9.X]
 basepython = pypy
@@ -37,13 +41,13 @@ deps = {[django19]deps}
 basepython = pypy
 deps = {[django18]deps}
 
-[testenv:pypy-1.7.X]
-basepython = pypy
-deps = {[django17]deps}
-
 [testenv:py35-trunk]
 basepython = python3.5
 deps = {[djangotrunk]deps}
+
+[testenv:py35-1.10.X]
+basepython = python3.5
+deps = {[django110]deps}
 
 [testenv:py35-1.9.X]
 basepython = python3.5
@@ -53,13 +57,13 @@ deps = {[django19]deps}
 basepython = python3.5
 deps = {[django18]deps}
 
-[testenv:py35-1.7.X]
-basepython = python3.5
-deps = {[django17]deps}
-
 [testenv:py34-trunk]
 basepython = python3.4
 deps = {[djangotrunk]deps}
+
+[testenv:py34-1.10.X]
+basepython = python3.4
+deps = {[django110]deps}
 
 [testenv:py34-1.9.X]
 basepython = python3.4
@@ -69,21 +73,17 @@ deps = {[django19]deps}
 basepython = python3.4
 deps = {[django18]deps}
 
-[testenv:py34-1.7.X]
-basepython = python3.4
-deps = {[django17]deps}
-
 [testenv:py33-1.8.X]
 basepython = python3.3
 deps = {[django18]deps}
 
-[testenv:py33-1.7.X]
-basepython = python3.3
-deps = {[django17]deps}
-
 [testenv:py27-trunk]
 basepython = python2.7
 deps = {[djangotrunk]deps}
+
+[testenv:py27-1.10.X]
+basepython = python2.7
+deps = {[django110]deps}
 
 [testenv:py27-1.9.X]
 basepython = python2.7
@@ -92,7 +92,3 @@ deps = {[django19]deps}
 [testenv:py27-1.8.X]
 basepython = python2.7
 deps = {[django18]deps}
-
-[testenv:py27-1.7.X]
-basepython = python2.7
-deps = {[django17]deps}
