fix python 3.3 tests

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,4 @@ deps =
   1.9.X: Django>=1.9,<1.10
   1.10.X: Django>=1.10,<1.11
   trunk: https://github.com/django/django/archive/master.zip
+  py33: celery<4
