add python-fitbit git commit dependency to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py{py,27,34,35}-{trunk,1.10.X,1.9.X},py{py,27,33,34}-1.8.X
 commands = {envpython} run_tests.py
 deps =
   -r{toxinidir}/requirements/test.txt
+  git+ssh://git@github.com/orcasgit/python-fitbit@c0b07d256679870e6285671a2285c4ba8e68ad84
   1.8.X: Django>=1.8,<1.9
   1.9.X: Django>=1.9,<1.10
   1.10.X: Django>=1.10,<1.11
