add django 1.11 and py36 to tox, drop trunk for now

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{py,27,34,35}-{trunk,1.10.X,1.9.X},py{py,27,33,34}-1.8.X
+envlist = py36-1.11.X,py{py,27,34,35}-{1.11.X,1.10.X,1.9.X},py{py,27,33,34}-1.8.X
 
 [testenv]
 commands = {envpython} run_tests.py
@@ -8,5 +8,6 @@ deps =
   1.8.X: Django>=1.8,<1.9
   1.9.X: Django>=1.9,<1.10
   1.10.X: Django>=1.10,<1.11
+  1.11.X: Django>=1.11a1,<2
   trunk: https://github.com/django/django/archive/master.zip
   py33: celery<4
