add docs to tox matrix

--- a/tox.ini
+++ b/tox.ini
@@ -11,3 +11,9 @@ deps =
   1.11.X: Django>=1.11a1,<2
   trunk: https://github.com/django/django/archive/master.zip
   py33: celery<4
+
+[testenv:docs]
+basepython = python3.5
+commands = sphinx-build -W -b html docs docs/_build
+deps = -r{toxinidir}/requirements/test.txt
+       django
