move docs under testenv umbrella

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,10 @@
 [tox]
-envlist = py36-1.11.X,py{py,27,34,35}-{1.11.X,1.10.X,1.9.X},py{py,27,33,34}-1.8.X
+envlist = py36-1.11.X,py{py,27,34,35}-{1.11.X,1.10.X,1.9.X},py{py,27,33,34}-1.8.X,docs
 
 [testenv]
-commands = {envpython} run_tests.py
+commands =
+  py{py,27,33,34,35,36}-{1.11.X,1.10.X,1.9.X,1.8.X}: {envpython} run_tests.py
+  docs: sphinx-build -W -b html docs docs/_build
 deps =
   -r{toxinidir}/requirements/test.txt
   1.8.X: Django>=1.8,<1.9
@@ -11,9 +13,4 @@ deps =
   1.11.X: Django>=1.11a1,<2
   trunk: https://github.com/django/django/archive/master.zip
   py33: celery<4
-
-[testenv:docs]
-basepython = python3.5
-commands = sphinx-build -W -b html docs docs/_build
-deps = -r{toxinidir}/requirements/test.txt
-       django
+  docs: django
