move docs under the py36 umbrella

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36-1.11.X,py{py,27,34,35}-{1.11.X,1.10.X,1.9.X},py{py,27,33,34}-1.8.X,docs
+envlist = py36-{1.11.X,docs},py{py,27,34,35}-{1.11.X,1.10.X,1.9.X},py{py,27,33,34}-1.8.X
 
 [testenv]
 commands =
