--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ simplejson = "<4,>=3.13"
 mock = "<3,>=2"
 freezegun = "<0.4,>=0.3.9"
 requests-mock = "<1.5,>=1.4.0"
-Django = "<2.2,>=2.1a1"
+Django = "<2.1,>=2.0"
 
 [dev-packages]
 six = "*"
